# np2ptp

./: .gitignore  CLAUDE.md  Cargo.toml  Novo(a) Documento de Texto.txt  README.md  ROADMAP.md  index.html  script.js  style.css
.github/workflows/: release.yml
crates/np2ptp-bridge/: Cargo.toml
crates/np2ptp-bridge/fuzz/: Cargo.toml
crates/np2ptp-bridge/fuzz/fuzz_targets/: bencode_parse.rs
crates/np2ptp-bridge/src/: bencode.rs  lib.rs  librqbit_source.rs  streaming.rs
crates/np2ptp-bridge/tests/: bridge_network.rs  librqbit_remote.rs  streaming_convert.rs
crates/np2ptp-core/: Cargo.toml
crates/np2ptp-core/fuzz/: Cargo.toml
crates/np2ptp-core/fuzz/fuzz_targets/: manifest_from_nptp.rs
crates/np2ptp-core/src/: chunk.rs  hash.rs  lib.rs  manifest.rs
crates/np2ptp-fec/: Cargo.toml
crates/np2ptp-fec/src/: lib.rs
crates/np2ptp-net/: Cargo.toml
crates/np2ptp-net/src/: lib.rs  receipts.rs
crates/np2ptp-net/tests/: mdns.rs  multi_source.rs  receipt_gc.rs  relay.rs  two_nodes.rs
crates/np2ptp-node/: Cargo.toml  build.rs
crates/np2ptp-node/src/: lib.rs  main.rs  portmap.rs  tracker.rs
crates/np2ptp-node/tests/: integration.rs
crates/np2ptp-rep/: Cargo.toml
crates/np2ptp-rep/src/: identity.rs  ledger.rs  lib.rs  receipt.rs
crates/np2ptp-sim/: Cargo.toml
crates/np2ptp-sim/src/: lib.rs  main.rs
crates/np2ptp-store/: Cargo.toml
crates/np2ptp-store/src/: lib.rs
docs/: BUILDING.md  EXAMPLES.md  RELAY.md  USAGE.md
docs/superpowers/plans/: 2026-07-07-json-progress-status.md  2026-07-08-github-pages-site.md  2026-07-08-local-torrent-bridge.md  2026-07-08-signed-receipt-exchange.md
docs/superpowers/specs/: 2026-07-07-json-progress-status-design.md  2026-07-08-github-pages-site-design.md  2026-07-08-local-torrent-bridge-design.md  2026-07-08-signed-receipt-exchange-design.md
python/: README.md  np2ptp.py
tracker/: README.md  package.json  server.js  vercel.json
tracker/api/: _store.js  announce.js  health.js  peers.js
