[package]
name = "np2ptp-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NP2PTP node: the .nptp linker (pack) and the downloading client (get)"

[lib]
name = "np2ptp_node"
path = "src/lib.rs"

[[bin]]
name = "np2ptp"
path = "src/main.rs"

[dependencies]
np2ptp-core = { path = "../np2ptp-core" }
np2ptp-store = { path = "../np2ptp-store" }
np2ptp-net = { path = "../np2ptp-net" }
np2ptp-bridge = { path = "../np2ptp-bridge" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = "1"
crab_nat = "0.7"
netdev = "0.31"
getrandom = "0.2"

[dev-dependencies]
sha1 = "0.10"
