[package]
name = "np2ptp-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NP2PTP research harness: measures dedup, permanence, incentives, and FEC cost"

[lib]
name = "np2ptp_sim"
path = "src/lib.rs"

[[bin]]
name = "np2ptp-sim"
path = "src/main.rs"

[dependencies]
np2ptp-core = { path = "../np2ptp-core" }
np2ptp-store = { path = "../np2ptp-store" }
np2ptp-net = { path = "../np2ptp-net" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
